# space-lua

./: .gitignore  CMakeLists.txt
VC2015/: GameEngine.sln  GameEngine.vcxproj  GameEngine.vcxproj.filters
VC2015/GameEngine/: GameEngine.vcxproj  GameEngine.vcxproj.filters
src/: Include.h  main.cpp
src/Application/: Application.cpp  Application.h  Manager.h  Window.cpp  Window.h
src/CodeEditorFrontend/: TaskEditor.qml  TaskEditorForm.ui.qml  main.cpp  main.qml  qml.qrc  qtquickcontrols2.conf  simulatordownloader.cpp
src/CodeShipBattle/: CodeShipBattle.pro  CodeShipBattle.pro.user.717228d  MainMenu.qml  MainPage.qml  MainPageForm.ui.qml  main.qml  qml.qrc  simulatordownloader.cpp  simulatordownloader.h
src/Engine/Graphics/: GraphicsObjectManager.cpp  GraphicsObjectManager.h  GraphicsWorld.cpp  GraphicsWorld.h
src/Engine/Graphics/GraphicsObject/: GraphicsObject.cpp  GraphicsObject.h  GraphicsObjectFactory.cpp  GraphicsObjectFactory.h
src/Engine/Graphics/Management/: ModelManager.h  ShaderProgManager.cpp  ShaderProgManager.h  TextureManager.cpp  TextureManager.h
src/Engine/Graphics/Model/: Mesh.cpp  Mesh.h  Model.cpp  Model.h  ModelParser.cpp  ModelParser.h
src/Engine/Graphics/Particles/: Particle.cpp  Particle.h  ParticleSystem.cpp  ParticleSystem.h  ParticleSystemFactory.cpp  ParticleSystemFactory.h
src/Engine/Graphics/Shaders/: ShaderManager.cpp  ShaderManager.h  ShaderProg.cpp  ShaderProg.h
src/Engine/Graphics/Skybox/: Skybox.cpp  Skybox.h
src/Engine/Graphics/Texture/: PngLoader.cpp  PngLoader.h
src/Engine/Logic/Controllers/: Controller.cpp  Controller.h
src/Engine/Logic/Controllers/Players/: Player.cpp  Player.h
src/Engine/Math/: Camera.cpp  Camera.h  Pipeline.cpp  Pipeline.h  math_3d.cpp  math_3d.h
src/Engine/Objects/: AbstractObject.cpp  AbstractObject.h  GameObject.cpp  GameObject.h  ObjectFactory.cpp  ObjectFactory.h  ObjectManager.cpp  ObjectManager.h
src/Engine/Objects/MacroObjects/: MacroObject.cpp  MacroObject.h  Planet.h
src/Engine/Objects/MicroObjects/: MicroObject.cpp  MicroObject.h  Ship.cpp  Ship.h
src/Engine/Physics/: CollisionObject.cpp  CollisionObject.h  CollisionShapesManager.cpp  CollisionShapesManager.h  PhysicsWorld.cpp  PhysicsWorld.h
src/Engine/World/: World.cpp  World.h  WorldCreator.cpp  WorldCreator.h
src/Game/: CollisionObjectTypes.h
src/Game/Ship/: Ship.cpp  Ship.h  ShipController.cpp  ShipController.h  ShipFactory.cpp  ShipFactory.h
src/Game/Ship/Blocks/: Block.cpp  Block.h  BlockEngine.cpp  BlockEngine.h  BlockFactory.cpp  BlockFactory.h  BlockMain.cpp  BlockMain.h  BlockShield.cpp  BlockShield.h  BlockTypes.h  BlockWeapon.cpp  BlockWeapon.h  OrientedBlock.cpp  OrientedBlock.h
src/Game/World/: World.cpp  World.h  WorldLoader.cpp  WorldLoader.h
src/Game/World/Effects/: Bullet.cpp  Bullet.h
src/Platform/Win/: Platform.cpp  Platform.h
src/Server/: api.py
src/build-CodeEditorFrontend-Desktop_Qt_5_8_0_GCC_64bit-Debug/: CodeEditorFrontend  Makefile  moc_simulatordownloader.cpp  qrc_qml.cpp
src/build-CodeShipBattle-Desktop_Qt_5_8_0_MinGW_32bit-Debug/: Makefile  Makefile.Debug  Makefile.Release
src/build-CodeShipBattle-Desktop_Qt_5_8_0_MinGW_32bit-Release/: Makefile  Makefile.Debug  Makefile.Release
